--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <img src="img/logo.png" alt="Sin foto">
         </div>
         <div class="title">
-          <h1>generador de HG</h1>
+          <h1>Crea tus Hastag</h1>
         </div>
 
       </div>
